force-app/main/default/objects/DD_Product__c/DD_Product__c.object-meta.xml
<CustomObject>
    <description>Root product record representing a dental plan design. Single source of truth. NEVER modified during quoting.</description>
    <label>Product</label>
    <nameField><label>Product Name</label><type>Text</type></nameField>
    <pluralLabel>Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>