force-app/main/default/objects/DD_Product__c/fields/Deductible_Family__c.field-meta.xml
<CustomField>
    <fullName>Deductible_Family__c</fullName>
    <label>Default Family Deductible</label>
    <type>Currency</type>
    <precision>18</precision><scale>2</scale><required>false</required>
    <description>Default family deductible ($150 PPO, $0 DHMO)</description>
</CustomField>