force-app/main/default/objects/DD_Product__c/fields/Deductible_Individual__c.field-meta.xml
<CustomField>
    <fullName>Deductible_Individual__c</fullName>
    <label>Default Individual Deductible</label>
    <type>Currency</type>
    <precision>18</precision><scale>2</scale><required>false</required>
    <description>Default individual deductible ($50 PPO, $0 DHMO)</description>
</CustomField>