force-app/main/default/objects/DD_Product__c/fields/DnP_Max_Waiver_Available__c.field-meta.xml
<CustomField>
    <fullName>DnP_Max_Waiver_Available__c</fullName>
    <label>D and P Waiver Available</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Can D&P Maximum Waiver be offered</description>
</CustomField>