force-app/main/default/objects/DD_Product__c/fields/Network_Fee_Basis__c.field-meta.xml
<CustomField>
    <fullName>Network_Fee_Basis__c</fullName>
    <label>Network Fee Basis</label>
    <type>Picklist</type>
    <required>true</required><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>PPO</fullName><default>false</default><label>PPO</label></value><value><fullName>PPO Plus Premier</fullName><default>false</default><label>PPO Plus Premier</label></value><value><fullName>DeltaCare USA</fullName><default>false</default><label>DeltaCare USA</label></value></valueSetDefinition></valueSet>
    <description>Dentist reimbursement method</description>
</CustomField>