force-app/main/default/objects/DD_Product__c/fields/Ortho_Available__c.field-meta.xml
<CustomField>
    <fullName>Ortho_Available__c</fullName>
    <label>Ortho Available</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Can orthodontic rider be added</description>
</CustomField>