force-app/main/default/objects/DD_Product__c/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <label>Product Category</label>
    <type>Lookup</type>
    <referenceTo>DD_Product_Category__c</referenceTo><relationshipLabel>Products</relationshipLabel><relationshipName>Products</relationshipName><required>true</required>
    <description>Parent category</description>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>