force-app/main/default/objects/DD_Product__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <label>Product Code</label>
    <type>Text</type>
    <length>20</length><required>true</required><unique>true</unique><externalId>true</externalId>
    <description>Internal SKU code</description>
</CustomField>