force-app/main/default/objects/DD_Product__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <label>Product Line</label>
    <type>Picklist</type>
    <required>true</required><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>DPPO</fullName><default>false</default><label>DPPO</label></value><value><fullName>DHMO</fullName><default>false</default><label>DHMO</label></value></valueSetDefinition></valueSet>
    <description>DPPO or DHMO</description>
</CustomField>