force-app/main/default/objects/DD_Product__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <label>Product Name</label>
    <type>Text</type>
    <length>100</length><required>true</required><unique>true</unique><externalId>true</externalId>
    <description>Unique plan name e.g. Deluxe 100, DeltaCare USA 11A</description>
</CustomField>