force-app/main/default/objects/DD_Product__c/fields/SmileWay_Eligible__c.field-meta.xml
<CustomField>
    <fullName>SmileWay_Eligible__c</fullName>
    <label>SmileWay Eligible</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>SmileWay Wellness Benefits available</description>
</CustomField>