force-app/main/default/objects/DD_Product__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Text</type>
    <length>2</length><required>false</required><unique>false</unique><externalId>false</externalId>
    <description>Filing jurisdiction state code</description>
</CustomField>