force-app/main/default/objects/DD_Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <columns>Product_Name__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Product_Line__c</columns>
    <columns>Is_Active__c</columns>
    <columns>State__c</columns>
</ListView>